--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
-.App {
+.app {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.app .container {
+  width: 500px;
+  height: 60vh;
+  background: #ffffff;
+  box-shadow: 0 0 10px 0 black;
 }
 
 .App-logo {
@@ -32,6 +44,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
